tests/invalid/05_typo_keyword.js
// 错误5: 关键字错误
fucntion test() {
    retrn 42;
}
